--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
             </ion-item>
         </ion-row>
        
-  <form [formGroup]="loginForm" (ngSubmit)="submit()" novalidate>
+  <form [formGroup]="loginForm" >
       <ion-row>
           <ion-item>
               <ion-label for="email"></ion-label>
